[gd_scene load_steps=5 format=3 uid="uid://dih3jc7y3b5kn"]

[ext_resource type="Script" path="res://source/scripts/Captive.gd" id="1_85vpj"]
[ext_resource type="Texture2D" uid="uid://bsg1r6dpsndl3" path="res://assets/sprites/icon.svg" id="1_mv8p8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_quxrq"]
size = Vector2(64, 64)

[sub_resource type="CircleShape2D" id="CircleShape2D_e5ohe"]
radius = 192.666

[node name="Captive" type="CharacterBody2D" groups=["Captive"]]
collision_layer = 21
collision_mask = 85
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 4294967294
script = ExtResource("1_85vpj")
follow_speed = 400.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_mv8p8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_quxrq")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 60.0
max_speed = 400.0
debug_enabled = true

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource("CircleShape2D_e5ohe")

[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
